# block-id

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: add_mod.rs  alphabet.rs  base.rs  cascade.rs  lib.rs  main.rs  permutation.rs  permute.rs  rotate.rs  transform.rs
