[package]
name = "block-id"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/drifting-in-space/block-id"
license = "MIT OR Apache-2.0"
description = "Library for generating opaque, unique, and short string values from (unsigned) integers"

[dependencies]
rand = "0.8.5"
rand_core = "0.6.3"
rand_pcg = "0.3.1"
